[gd_scene load_steps=13 format=3 uid="uid://cadaxqm72dhf3"]

[ext_resource type="Script" path="res://scripts/menu_pause.gd" id="1_jgxyr"]
[ext_resource type="Shader" path="res://shaders/vignette.gdshader" id="13_pyb3g"]
[ext_resource type="Shader" path="res://shaders/chromatic_aberration.gdshader" id="14_6dvuk"]
[ext_resource type="Shader" path="res://shaders/glitch.gdshader" id="15_qot3d"]
[ext_resource type="AudioStream" uid="uid://dsty5h6exrvs1" path="res://SFX/SFX_glitch_tuto.mp3" id="16_urt7s"]
[ext_resource type="Theme" uid="uid://cidybjfkfi0pc" path="res://UI/UI_theme.tres" id="18_dqebs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nncaq"]
shader = ExtResource("13_pyb3g")
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5
shader_parameter/vignette_rgb = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6ms33"]
shader = ExtResource("14_6dvuk")
shader_parameter/r_displacement = Vector2(1, 0)
shader_parameter/g_displacement = Vector2(0, 0)
shader_parameter/b_displacement = Vector2(-1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ifxbp"]
shader = ExtResource("15_qot3d")
shader_parameter/shake_power = 0.05
shader_parameter/shake_rate = 1.0
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.01

[sub_resource type="Animation" id="Animation_ocknj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("glitch_effect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pp61w"]
resource_name = "button"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("glitch_effect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e3yjm"]
_data = {
"RESET": SubResource("Animation_ocknj"),
"button": SubResource("Animation_pp61w")
}

[node name="menu_pause" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jgxyr")

[node name="vignette" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_nncaq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
rect = Rect2(0, 0, 1920, 1080)

[node name="chromatic_ab" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_6ms33")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackBufferCopy2" type="BackBufferCopy" parent="."]
rect = Rect2(0, 0, 1920, 1080)

[node name="glitch_effect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_ifxbp")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="glitch_animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e3yjm")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_urt7s")
pitch_scale = 2.5
bus = &"Sound"

[node name="pause" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="main" type="PanelContainer" parent="pause"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 129.0
offset_top = -432.0
offset_right = 516.0
offset_bottom = -106.0
grow_vertical = 0
theme = ExtResource("18_dqebs")

[node name="VBoxContainer" type="VBoxContainer" parent="pause/main"]
layout_mode = 2
alignment = 1

[node name="resumeButton" type="Button" parent="pause/main/VBoxContainer"]
layout_mode = 2
text = "Resume_"
alignment = 0

[node name="settingButton" type="Button" parent="pause/main/VBoxContainer"]
layout_mode = 2
text = "Settings_"
alignment = 0

[node name="mainButton" type="Button" parent="pause/main/VBoxContainer"]
layout_mode = 2
text = "Main menu_"
alignment = 0

[node name="back" type="PanelContainer" parent="pause"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 129.0
offset_top = -216.0
offset_right = 516.0
offset_bottom = -108.0
grow_vertical = 0
theme = ExtResource("18_dqebs")

[node name="VBoxContainer" type="VBoxContainer" parent="pause/back"]
layout_mode = 2
alignment = 1

[node name="backButton" type="Button" parent="pause/back/VBoxContainer"]
layout_mode = 2
text = "Back_"
alignment = 0

[node name="settings_label" type="PanelContainer" parent="pause"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 645.0
offset_top = -328.0
offset_right = 1032.0
offset_bottom = -106.0
grow_vertical = 0
theme = ExtResource("18_dqebs")

[node name="VBoxContainer" type="VBoxContainer" parent="pause/settings_label"]
layout_mode = 2
alignment = 1

[node name="fullscreen" type="Label" parent="pause/settings_label/VBoxContainer"]
layout_mode = 2
text = "Display_"
vertical_alignment = 1

[node name="audio" type="Label" parent="pause/settings_label/VBoxContainer"]
layout_mode = 2
text = "Audio volume_"
vertical_alignment = 1

[node name="settings" type="PanelContainer" parent="pause"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1161.0
offset_top = -326.0
offset_right = 1806.0
offset_bottom = -106.0
grow_vertical = 0
theme = ExtResource("18_dqebs")

[node name="VBoxContainer" type="VBoxContainer" parent="pause/settings"]
layout_mode = 2
alignment = 1

[node name="display" type="OptionButton" parent="pause/settings/VBoxContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Fullscreen_"
popup/item_0/id = 0
popup/item_1/text = "Windowed_"
popup/item_1/id = 1

[node name="audio" type="HSlider" parent="pause/settings/VBoxContainer"]
layout_mode = 2
min_value = -50.0
max_value = 0.0

[node name="inputs" type="Label" parent="pause"]
layout_mode = 0
offset_left = 129.0
offset_top = 108.0
offset_right = 1032.0
offset_bottom = 446.0
theme = ExtResource("18_dqebs")
theme_override_font_sizes/font_size = 40
text = "ZQSD / WASD - move
Space - jump
Left / right mouse button - use the Scale Glove
E - interact
Middle mouse button - throw / use the Cube Gun
A - glitch time"
vertical_alignment = 1

[connection signal="pressed" from="pause/main/VBoxContainer/resumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="pause/main/VBoxContainer/settingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="pause/main/VBoxContainer/mainButton" to="." method="_on_main_button_pressed"]
[connection signal="pressed" from="pause/back/VBoxContainer/backButton" to="." method="_on_back_button_pressed"]
[connection signal="item_selected" from="pause/settings/VBoxContainer/display" to="." method="_on_display_item_selected"]
[connection signal="value_changed" from="pause/settings/VBoxContainer/audio" to="." method="_on_audio_value_changed"]
